dividing language resources

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -22,7 +22,7 @@
                     {{ .Content }}
                 </article>
                 <nav class="section-pagelist">
-                    <h1 class="section-pagelist-heading">{{if eq .Lang "ja" }}このカテゴリーのページ{{ end }}{{if eq .Lang "en" }}Articles in this category{{ end }}{{if eq .Lang "zh" }}此类别中的内容{{ end }}</h1>
+                    <h1 class="section-pagelist-heading">{{ i18n "Articles_in_this_category" }}</h1>
                     {{- .Scratch.Set "pages" (.Pages | union .Sections) }}
                     {{- $pages := (.Scratch.Get "pages") }}
                       <ul>
