--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -12,9 +12,7 @@
 {{if gt ($.Scratch.Get "pagecnt") 0}}
   {{ with $related.ByWeight }}
 <hr>
-{{if eq .Lang "ja" }}<div class="seealso">次のページも参照してください</div>{{ end }}
-{{if eq .Lang "en" }}<div class="seealso">See also</div>{{ end }}
-{{if eq .Lang "zh" }}<div class="seealso">另请参阅下一页</div>{{ end }}
+<div class="seealso">{{ i18n "See_also" }}</div>
 <ul>
 	{{- range . -}}
       {{- if in .Params.disabled $.Site.Params.TargetRegion -}}
