--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,12 +1,8 @@
+{{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition warning">
   <div class="admonition-alt">
     <i class="fas fa-exclamation-circle"></i>
-    <span>
-    {{- if eq $.Site.Params.LanguageName "日本語" -}}注意
-    {{- else if eq $.Site.Params.LanguageName "English" -}}Caution
-    {{- else if eq $.Site.Params.LanguageName "中文(简体)" -}}注意
-    {{- end -}}
-    </span>
+    <span>{{ i18n "Title_caution" }}</span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
 </aside>
