add revised for Hugo 0.55

--- a/layouts/shortcodes/disabled.html
+++ b/layouts/shortcodes/disabled.html
@@ -1,4 +1,5 @@
- {{- if in .Params $.Site.Params.TargetRegion}}
- {{else}}
- {{- .Inner}}
- {{- end}}
+{{- $_hugo_config := `{ "version": 1 }` -}}
+{{- if in .Params $.Site.Params.TargetRegion}}
+{{else}}
+{{- .Inner}}
+{{- end}}
