--- a/layouts/shortcodes/reference.html
+++ b/layouts/shortcodes/reference.html
@@ -1,8 +1,8 @@
 {{- $_hugo_config := `{ "version": 1 }` -}}
-<aside class="admonition warning">
+<aside class="admonition reference">
   <div class="admonition-alt">
-    <i class="fas fa-exclamation-circle"></i>
-    <span>{{ i18n "Title_caution" }}</span>
+    <i class="fas fa-book fa-lg"></i>
+    <span>{{ i18n "Title_references" }}</span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
 </aside>
