--- a/layouts/shortcodes/hint.html
+++ b/layouts/shortcodes/hint.html
@@ -1,8 +1,7 @@
 {{- $_hugo_config := `{ "version": 1 }` -}}
-<aside class="admonition warning">
+<aside class="admonition hint">
   <div class="admonition-alt">
-    <i class="fas fa-exclamation-circle"></i>
-    <span>{{ i18n "Title_caution" }}</span>
+    <span class="admonition-alt-text">{{ i18n "Title_tips" }}</span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
 </aside>
