--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -69,6 +69,7 @@
     <!-- <script src="{{ "javascripts/transition.min.js" | relURL }}"></script> -->
     <script src="{{ "javascripts/zoom.js" | relURL }}"></script>
     <script src="{{ "javascripts/custom.js" | relURL }}"></script>
+    <script src="https://sdk.form.run/js/v2/formrun.js"></script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
