--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,9 @@
     <header class="header">
         {{ partial "header" . }}
     </header>
-    <div class="hero" style="background-image: url('{{ "images/hero_common.png" | relURL}}');"></div>
+    <div class="eye-catching">
+        <div class="hero" style="background-image: url('{{ "images/hero_common.png" | relURL}}');"></div>
+    </div>
     <main class="main">
         <article class="article" >
             <div class="wrapper">
