--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,7 +1,7 @@
 {{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition note">
   <div class="admonition-alt">
-    <i class="fas fa-check"></i>
+    <i class="fas fa-pencil-alt"></i>
     <span>{{ i18n "Title_note" }}</span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
