--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -288,8 +288,8 @@ overflow-y: scroll;
   position: relative;
 }
 .article .admonition.note {
-  border: 1px solid #a7cde1;
-  background-color: #d9edf7;
+  border: 1px solid #B5B5DB;
+  background-color: #f8f8ff;
   border-radius: 10px;
 }
 .article .admonition.note .fas {
