--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -576,7 +576,7 @@ ul.breadcrumbs {
   position: fixed;
   width: 200px;
   padding-top: 48px;
-  height: 100%;
+  height: calc(100% - 130px);
   overflow: auto;
   /*line-height: 13px;*/
   font-size: .95rem;
