アンケートを印刷ページから消す

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -889,7 +889,7 @@ cursor: pointer;
 }
 
 @media print {
-nav, header, footer {
+nav, header, footer, #enquete {
   display: none !important;
 }
 .font-ja {
