Revert "alternate設定の変更"
This reverts commit c25b27d17860b7759df651cfa2dd52cd3d9e3722.

--- a/layouts/partials/alternatelink.html
+++ b/layouts/partials/alternatelink.html
@@ -1,10 +1,10 @@
   {{- range .AllTranslations -}}
     <link rel="alternate" href="https://jp.cybozu.help{{ .RelPermalink }}" hreflang="{{ .Site.Language.Lang }}-jp" />
     {{- if eq .Site.Language.Lang "ja" -}}
-      <link rel="alternate" href="https://get.kintone.help{{ .RelPermalink }}" hreflang="{{ .Site.Language.Lang }}-us" />
+      <link rel="alternate" href="https://help.kintone.com{{ .RelPermalink }}" hreflang="{{ .Site.Language.Lang }}-us" />
     {{- end -}}
     {{- if eq .Site.Language.Lang "en" -}}
-      <link rel="alternate" href="https://get.kintone.help{{ .RelPermalink }}" hreflang="{{ .Site.Language.Lang }}-us" />
+      <link rel="alternate" href="https://get.kintone.help/hc/en-us" hreflang="{{ .Site.Language.Lang }}-us" />
       <link rel="alternate" href="https://jp.cybozu.help{{ .RelPermalink }}" hreflang="x-default" />
     {{- end -}}
     {{- if ne .Site.Language.Lang "en" -}}
