--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -1,44 +1,25 @@
 {{if eq .Lang "ja" }}
 <aside id="enquete" style="display:none;">
   <form id="enqueteForm" name="enqueteForm" target="blankFrame" method="post">
-    <input type="hidden" name="questions[1200722]" value="{{- partial "title" . -}}">
-    <input type="hidden" name="questions[1200723]" value="https://jp.cybozu.help{{ .Permalink | relURL }}">
-    <input class="enqueteIpAddr" type="hidden" name="questions[74184]" value="">
-    <input class="enqueteSubDomain" type="hidden" name="questions[74185]" value="">
-    <input class="enqueteReferrer" type="hidden" name="questions[88367]" value="">
-    <input class="enqueteKeyWords" type="hidden" name="questions[88366]" value="">
-    <input id="enqueteRadio" type="hidden" name="questions[74183]" value="">
     <div id="enqueteYesOrNoBtns">
-      この情報は役に立ちましたか？
-      <div>
-        <input class="enqueteBtn" id="feedback_yes" type="button" value="はい" onclick='$.cookie("answered","{{ .Permalink | relURL }}", {path:"/",expires:1});'>
-        <input class="enqueteBtn" id="feedback_no" type="button" value="いいえ" onclick='$.cookie("answered","{{ .Permalink | relURL }}",{path:"/",expires:1});'>
+      この記事は役に立ちましたか？
+      <div class="btn_article_vote">
+          <button class="btn_article_vote" id="feedback_yes" onclick='$.cookie("answered","{{ .Permalink | relURL }}", {path:"/",expires:1});'>
+              <span class="fa-stack">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-thumbs-up fa-stack-1x" aria-label="Yes"></i>
+              </span>
+          </button>
+          <button class="btn_article_vote" id="feedback_no" onclick='$.cookie("answered","{{ .Permalink | relURL }}",{path:"/",expires:1});'>
+              <span class="fa-stack">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-thumbs-down fa-stack-1x" aria-label="No"></i>
+              </span>
+          </button>
       </div>
-    </div>
-    <span id="enqueteThanks" style="display:none;">
-    ありがとうございます！お役に立てたようで何よりです。
-    </span>
-    <span id="enqueteSorry" style="display:none;">
-    お役に立てず、申し訳ございません。
-    </span>
-    <div id="additionnalEnquate" style="display:none;">
-      <div>どのように改善したらよいか、ぜひお聞かせください。</div>
-        <textarea id="additionnalEnquate_textArea" name="questions[74182]"></textarea>
-        <span id="additionnalEnquate_countChar">残り1500文字</span>
-        <div id="enquete_note">
-         <ul>
-          <li>質問や要望への返答は行っておりません。</li>
-          <li>個人情報、秘密保持義務のある情報、個別の通信内容等の記入はご遠慮ください。</li>
-         </ul>
-        </div>
-        <input type="submit" value="送信" id="feedback_send" class="enqueteBtn btn_disabled">
-        <input type="submit" value="閉じる" id="feedback_sendWithoutComment" class="enqueteBtn">
     </div>
   </form>
 </aside>
 <script src="{{ "javascripts/enquete.js" | relURL }}"></script>
-<script>
-document.getElementById("enqueteForm").action="https://formcreator.jp/answer.php/screens/enquete_from_external_site?key=pDgJI91lHBlbFjGvfIKRhw%3D%3D";
-</script>
 <iframe name="blankFrame" width=0 height=0 style="visibility:hidden"></iframe> <!-- for questionnaire -->
 {{ end }}
