disabled search engine crawler on search results page

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
     {{- with .Site.Params.author }}
     <meta name="author" content="{{ . }}">
     {{- end }}
-    {{- if eq .Params.noindex true }}
+    {{- if eq .Params.type "search_result"}}
     <meta name="robots" content="noindex">
     {{- end }}
 
