set paramter url

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -20,6 +20,6 @@
     </div>
   </form>
 </aside>
-<script src="{{ "javascripts/enquete.js" | relURL }}"></script>
+<script src="{{ "javascripts/enquete.js?20200518" | relURL }}"></script>
 <iframe name="blankFrame" width=0 height=0 style="visibility:hidden"></iframe> <!-- for questionnaire -->
 {{ end }}
