--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -719,9 +719,14 @@ cursor: pointer;
   display: block;
   border-bottom: none;
 }
+.main {
+  padding: 0 0 6rem;
+  width: 100%;
+  overflow: hidden;
+}
 #enquete {
   padding: 9px;
-  background-color: rgba(29,30,31,0.8);
+  background-color: rgba(9,17,38,0.7);
   color: #fff;
   position: fixed;
   bottom: 0;
@@ -729,49 +734,24 @@ cursor: pointer;
   z-index: 1;
   font-size: .9rem;
 }
-.main {
-  padding: 0 0 6rem;
-  width: 100%;
-  overflow: hidden;
-}
-.btn_article {
-  text-decoration: none;
-}
-.btn-article-vote {
-  margin-top: 6px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  text-align: center;
-  overflow: hidden; 
-  background-color:  #428AFF;
+.enquetebtn {
+  color: #333;
+  min-width: 65px;
+  height: 27px;
+  background: #eee;
+  border: none;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  display: inline-block;
   cursor: pointer;
-  z-index: 1;
-  position: relative;
+  margin: 5px 0 0 10px;
 }
-.btn-article-vote:focus {
-  box-shadow:0 0 0 3px rgba(131,192,253,0.5);
+.enquetebtn:hover {
+  background: #F8F8F8;
 }
-.vote-yes{
-  margin-right: 5px;
-}
-.vote-yes::before,
-.vote-no::before  {
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  margin-left: -11px;
-  color: #FFFFFF;
-  font-size: 23px;
-  z-index: -1;
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-}
-.vote-yes::before {
-  content: '\f164';
-}
-.vote-no::before {
-  content: '\f165';
+.enquetebtn:focus {
+  outline-color: #f17900;
 }
 .seealso {
   font-size: 1em;
