--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | relURL }}{{ else }}{{ "favicon.ico" | relURL }}{{ end }}">
     <link rel="icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | relURL }}{{ else }}{{ "favicon.ico" | relURL }}{{ end }}">
 
-    <link rel="stylesheet" href="{{ "stylesheets/application.css?20200703" | relURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/application.css" | relURL }}">
     <link rel="stylesheet" href="{{ with .Site.Params.highlight_css }}{{ . | relURL }}{{ else }}{{ "stylesheets/highlight/highlight.css" | relURL }}{{ end }}">
     <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | relURL }}">
     <link href="//js.cybozu.com/font-awesome/v5.0.13/css/fontawesome-all.min.css" rel="stylesheet">
