--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,5 +6,12 @@
         {{ end }}
       </ul>
     </div>
-    <div id="footercopyright">{{ i18n "Footer_copyright" }}</div>
+    <div id="footercopyright">
+    {{ i18n "Footer_copyright" }}<br>
+    {{- if eq .Site.Params.TargetRegion "US" }}
+    <!-- CookiePro Cookies Settings button start -->
+    <button id="ot-sdk-btn" class="ot-sdk-show-settings"> Cookie Settings</button>
+    <!-- CookiePro Cookies Settings button end -->
+    {{- end }}
+    </div>
 </div>
