繁体字フォント追加

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -61,6 +61,9 @@ h1, h2, h3, h4, h5, h6 {
 .font-zh, .font-zh input {
   font-family: "PingFang SC", "Microsoft YaHei", "Arial", "Helvetica Neue", "Helvetica", "Verdana", sans-serif;
 }
+.font-zh-tw, .font-zh-tw input {
+    font-family: "PingFang TC", "Microsoft JhengHei", Arial, "Helvetica Neue", Helvetica, Verdana, sans-serif;
+}
 .fa, .fas {
   color: #0d7b91;
 }
